--- a/app/src/main/res/values/guardian.xml
+++ b/app/src/main/res/values/guardian.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="guardian_url">https://custom-sns-app-test.guardian.auth0.com</string>
+    <string name="tenant_url">https://guardian-demo.us.auth0.com</string>
 </resources>
