feat(app): consent fragments

--- a/app/src/main/res/layout/activity_notification_with_consent_details.xml
+++ b/app/src/main/res/layout/activity_notification_with_consent_details.xml
@@ -45,53 +45,10 @@
                 android:text="Do you approve this transaction?"
                 android:textSize="34sp" />
 
-            <TextView
+            <FrameLayout
+                android:id="@+id/consentDetailsFragmentContainer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Binding Message"
-                android:textSize="12sp"
-                android:theme="@style/Label.Header" />
-
-            <TextView
-                android:id="@+id/bindingMessage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:textSize="12sp"
-                android:theme="@style/Label"
-                tools:text="ABC-123-DEF" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Requested scope"
-                android:textSize="12sp"
-                android:theme="@style/Label.Header" />
-
-            <TextView
-                android:id="@+id/scope"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:textSize="12sp"
-                android:theme="@style/Label"
-                tools:text="read:foo" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Date"
-                android:textSize="12sp"
-                android:theme="@style/Label.Header" />
-
-            <TextView
-                android:id="@+id/dateText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="36dp"
-                android:textSize="12sp"
-                android:theme="@style/Label"
-                tools:text="Today at 18:56:21" />
+                android:layout_height="match_parent"/>
 
         </LinearLayout>
 
