--- a/app/src/main/res/layout/fragment_consent_payment_initiation.xml
+++ b/app/src/main/res/layout/fragment_consent_payment_initiation.xml
@@ -5,7 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".NotificationWithConsentDetailsActivity">
+    tools:context=".fragments.consent.ConsentPaymentInitiationFragment">
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30sp"
+        android:text="Do you approve this payment?"
+        android:textSize="34sp" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Binding Message"
+        android:textSize="12sp"
+        android:theme="@style/Label.Header" />
+
+    <TextView
+        android:id="@+id/bindingMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:textSize="12sp"
+        android:theme="@style/Label"
+        tools:text="ABC-123-DEF" />
 
     <TextView
         android:layout_width="match_parent"
@@ -52,7 +77,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/paymentAmountCurrency"
+            android:id="@+id/paymentAmountCurrencyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="6dp"
@@ -61,7 +86,7 @@
             tools:text="CUR" />
 
         <TextView
-            android:id="@+id/paymentAmount"
+            android:id="@+id/paymentAmountText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24sp"
