feat: render dynamic authorization details item

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,7 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
+    <style name="Label.Small" parent="Label">
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
