--- a/app/src/main/res/layout/fragment_dynamic_authorization_details.xml
+++ b/app/src/main/res/layout/fragment_dynamic_authorization_details.xml
@@ -8,19 +8,17 @@
     tools:context=".fragments.consent.DynamicAuthorizationDetailsFragment">
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30sp"
-        android:text="Do you approve this transaction?"
-        android:textSize="34sp" />
+        android:text="@string/generic_approve_transaction_question"
+        android:theme="@style/TextAppearance.AppCompat.Display1" />
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Binding Message"
-        android:textSize="12sp"
+        android:text="@string/binding_message_label"
         android:theme="@style/Label.Header" />
 
     <TextView
@@ -28,32 +26,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:textSize="12sp"
-        android:theme="@style/Label"
-        tools:text="ABC-123-DEF" />
+        android:theme="@style/Label.Small"
+        tools:text="@string/binding_message_sample" />
 
     <LinearLayout
         android:id="@+id/dynamicAuthorizationDetailsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-    </LinearLayout>
+        android:orientation="vertical" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Date"
-        android:textSize="12sp"
+        android:text="@string/date_label"
         android:theme="@style/Label.Header" />
 
     <TextView
         android:id="@+id/dateText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:textSize="12sp"
-        android:theme="@style/Label"
-        tools:text="Today at 18:56:21" />
+        android:theme="@style/Label.Small"
+        tools:text="@string/date_sample" />
 
 </LinearLayout>
