--- a/app/src/main/res/layout/fragment_consent_payment_initiation.xml
+++ b/app/src/main/res/layout/fragment_consent_payment_initiation.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
         android:text="@string/approve_payment_transaction_question"
-        android:theme="@style/TextAppearance.AppCompat.Display1" />
+        android:theme="@style/Display" />
 
 
     <TextView
